Added form and validation to fields

--- a/user-onboarding/src/App.css
+++ b/user-onboarding/src/App.css
@@ -20,3 +20,11 @@
 .App-link {
   color: #09d3ac;
 }
+
+.user-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
